# foundations_life_expectancy

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
life_expectancy/: cleaning.py  creating_sample_eu_life_expectancy_raw_dataset.py  loading_data.py  preprocessing_data.py  saving_data.py
life_expectancy/tests/: conftest.py  test_cleaning.py  test_loading_data.py  test_preprocessing_data.py  test_saving_data.py
life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv
