[project]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Matilde Saraiva", email = "matilde.soares.saraiva@gmail.com" }
]
dependencies = [
    "pandas<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov",
    "toml",
    "setuptools"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
